# kbterm-rs

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/samples/: advanced_user_data.rs  ansi.rs  autocomplete.rs  builder.rs  colors.rs  ctrl_c.rs  debug_console.rs  lorem.rs  mod.rs  test1.rs  test2.rs  test3.rs  window_title.rs
src/samples/assets/: builder.yaml  lavel-view.yaml  lorem.txt  style.toml  text_with_ansi_codes.txt  vspace.yaml
src/traits/: mod.rs  sample.rs
